--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -76,4 +76,6 @@
     border-color: transparent;
     border-radius: 5px;
     color: white;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
 }
