--- a/src/Pages/Admindashboard/Addash.css
+++ b/src/Pages/Admindashboard/Addash.css
@@ -54,3 +54,57 @@ button:hover{
 
 
 }
+.heading2{
+    height: 15vh;
+    width: 60%;
+    /* background-color: blue; */
+    margin-left: 45vh;
+    margin-top: 7vh;
+
+}
+.heading2 span{
+    font-size: 7vh;
+    margin-left: 2vh;
+
+    color: #004b80;
+    letter-spacing: 1PX;
+    Font-Family :'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+.candidate_approval_table{
+    height: 15vh;
+    width: 60%;
+    margin-left: 45vh;
+     /* background-color: blue; */
+     margin-top: 1vh;
+
+}
+.candidate_approval_table table{
+    width: 100%;
+    height: 5vh;
+    border:3px solid #00ABE4;
+    text-align: center;
+    Font-Family :'Montserrat', sans-serif;
+}
+th{
+    border:3px solid #00ABE4;
+    Font-Family :'Montserrat', sans-serif;
+    color: #004b80;
+    height: 5vh;
+}
+td{
+    height: 7vh;
+    border:3px solid #00ABE4;
+    Font-Family :'Montserrat', sans-serif;
+    color: #004b80;
+    font-weight: bolder;
+}
+button{
+   height: 5vh;
+   width: 10vh;
+   background-color: #00ABE4;
+   margin-top: 1%;
+   Font-Family :'Montserrat', sans-serif;
+   font-weight: bolder;
+    color: white;
+    margin-right: 25%;
+}
