--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -107,34 +107,33 @@
         margin-left: 35%;
     }
 }
-
 @media only screen and (max-width: 412px) {
-    * {
-        margin: 0;
-        padding: 0;
-    }
-
     .outer-div {
         flex-direction: column;
         align-items: center;
-        padding: 10vh 5%;
-        width: 100%;
+        padding-top: 10vh;
+        padding-left: 2%;
+        height: 90vh;
     }
 
-    .inner-div1, .inner-div2 {
+    .inner-div1,
+    .inner-div2 {
         width: 90%;
-        margin-left: 0;
-        margin-bottom: 5vh;
+        margin: 0 auto;
+        /* margin-bottom: 15vh; */
     }
-
-    .inner-div4 {
-        margin-left: initial;
-        margin-top: 16vh;
+    .inner-div4{
+        margin-top: 15vh;
     }
-
     .button-div {
-        margin-left: initial;
+        margin-left: auto;
+        margin-right: auto;
         margin-top: 10vh;
-        margin-left: 45%;
+    }
+
+    .clipart-div {
+        height: 50vh; /* Adjusted height */
+        width: 80%; /* Adjusted width */
+        margin: 0 auto; /* Centering */
     }
 }
