--- a/src/Pages/Candashboard/Candash.css
+++ b/src/Pages/Candashboard/Candash.css
@@ -67,6 +67,7 @@
 .candash-but-div{
     height: 7vh;
     width: 100%;
+    margin-left: 7vh;
     font-size: 20px;
     background-color: #00ABE4;
     border-color: transparent;
