--- a/src/Pages/LogIn/LogIn.css
+++ b/src/Pages/LogIn/LogIn.css
@@ -66,9 +66,9 @@
     display: block;
 }
 .iconimg{
-    height: 6vh;
-    width: 50%;
-    margin-top: 20px;
+    height: 5vh;
+    width: 47%;
+    margin-top: 4vh;
     margin-left: 18px;
     background-position: center;
     background-repeat: no-repeat;
