--- a/src/Pages/Admindashboard/Addash.css
+++ b/src/Pages/Admindashboard/Addash.css
@@ -106,7 +106,7 @@ button:hover{
    Font-Family :'Montserrat', sans-serif;
    font-weight: bolder;
     color: white;
-    margin-right: 25%;
+    margin-right: ;
     border: none;
     border-radius: 5px;
 }
