buttons are center aligned

--- a/src/Pages/Voting/Voting.css
+++ b/src/Pages/Voting/Voting.css
@@ -33,7 +33,7 @@
    Font-Family :'Montserrat', sans-serif;
    font-weight: bolder;
     color: white;
-    margin-right: %;
+    margin-right: -1%;
     border: none;
     border-radius: 5px;
 }
