--- a/src/components/Candiform.css
+++ b/src/components/Candiform.css
@@ -16,11 +16,11 @@
 }
 .candi-form-btn:hover{
     background-color: rgb(0, 171, 228);
-    height: 9vh;
-    width: 145%;
+    /* height: 9vh;
+    width: 145%; */
     cursor: pointer;
-    box-shadow:1px 1px 5px rgb(207, 202, 202);
-    text-shadow: 1px 3px 3px white;
+    box-shadow:4px 4px 5px rgb(207, 202, 202);
+    /* text-shadow: 1px 3px 3px white; */
 }
 .candi-form-btn{
     cursor: pointer;
