--- a/src/Pages/Voterdetails/Voterdetails.css
+++ b/src/Pages/Voterdetails/Voterdetails.css
@@ -83,22 +83,39 @@
 .name{
     height: 8vh;
     width: 100%;
-    margin-right: 1%;
+   
     color: #004b80;
     margin-top: 1vh;
 }
 .id{
     height: 8vh;
     width: 100%;
+    margin-left: 4%;
     color: #004b80;
     margin-top: 4px;
 }
 .assemly{
     height: 8vh;
     width: 100%;
+    margin-left: 6%;
    color: #004b80;
     margin-top: 4px;
 }
+.id_my{
+    height: 8vh;
+    width: 75%;
+    
+   color: #004b80;
+    margin-top: 4px;
+}
+.assemly_my{
+    height: 8vh;
+    width: 75%;
+    
+   color: #004b80;
+    margin-top: 4px;
+}
+
 .checkbox_div input[type="checkbox"]{
     appearance: none;
     -webkit-appearance: none;
