--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -17,26 +17,40 @@
       display: flex;
       flex-wrap: wrap;
   }
+  .icon-div{
+    height: 5vh;
+    width: 13%;
+    /* background-color: brown; */
+  }
   .footer-mail, .footer-phone, .footer-web{
     height: 5vh;
-    width: 100%;
+    width: 10%;
+    /* margin-left: 2%; */
+    /* background-color: blueviolet; */
   }
   .footer-copy-div{
     height: 23vh;
     width: 500px;
-    background-color: olive;
-    margin-left: 5%;
+    /* background-color: olive; */
+    margin-left: 4%;
     margin-top: 2vh;    
       color: white;
       font-family: 'Montserrat', sans-serif;
       text-align: center;    
   }
   .links-div{
-    background-color: blue;    
+    /* background-color: blue;     */
       height: 17vh;
       width: 500px;
       margin-left: 15%;
       margin-top: 0vh;          
+  }
+  .details-div{
+    height: 5vh;
+    width: 80%;
+    margin-left: -30%;
+    /* background-color: chartreuse; */
+    text-align: left;
   }
 
   @media only screen and (max-width: 920px){
