--- a/src/Pages/Nomdone/Nomdone.css
+++ b/src/Pages/Nomdone/Nomdone.css
@@ -33,6 +33,9 @@
     margin-left: 2%;
     background-color: #00ABE4;
     margin-top: 3%;
+    border: none;
+    border-radius: 5px;
+    font-size: 90%;
 }
 .nomdonebutton-text{
     color: white;
