--- a/src/components/Footer.css
+++ b/src/components/Footer.css
@@ -26,6 +26,7 @@
   .footer-mail, .footer-phone, .footer-web{
     height: 5vh;
     width: 10%;
+    margin-top: -5%;
     /* margin-left: 2%; */
     /* background-color: blueviolet; */
   }
@@ -49,7 +50,7 @@
   .details-div{
     height: 5vh;
     width: 80%;
-    margin-left: -30%;
+    margin-left: -28%;
     /* background-color: chartreuse; */
     text-align: left;
   }
